testsuite/bsc.typechecker/kind/TypeAliasPartialAppWithConflictingKindSig.bs.bsc-out.expected
checking package dependencies
compiling TypeAliasPartialAppWithConflictingKindSig.bs
Error: "TypeAliasPartialAppWithConflictingKindSig.bs", line 3, column 23: (T0021)
  Kind error at:
    Bit

  Expected kind:
    * -> *

  Inferred kind:
    # -> *

