testsuite/bsc.typechecker/kind/TypeAliasPartialAppWithConflictingKindSig.bs
package TypeAliasPartialAppWithConflictingKindSig () where

type (Foo :: * -> *) = Bit

